# json_tools

./: .coveragerc  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  csv_to_subtitles_json.py  joined.csv  pyproject.toml  requirements-test.txt  requirements.txt  sitecustomize.py  usercustomize.py
.github/workflows/: tests.yml
ae/script/: add_layers_to_comp.jsx  create_compositions.jsx  import_and_insert_sound.jsx
docs/: _config.yml  index.md
expression_ae/: Transform_Opacity_fadein_onTime.js  opacity_json_data_driven.js  opacity_json_data_driven_v03.js  opacity_json_data_driven_v04.js  sourceText_json_info.js  sourceText_json_singleKey_v04.js  sourceText_json_wire.js  sourceText_json_wire_v05_orientation.js  transform_opacity_fadein_onTime_v02.js  transform_opacity_fadein_onTime_v03.js  transform_scale_uniform_contain.js  transform_scale_uniform_contain_v01.js
expression_ae/claim/: anchor_baseline_centered_text.js  position_baseline_locked_text_1_line.js  position_baseline_locked_text_multiline.js  scale_uniform_contain_v02.js  sourceText_json_wire_simple.js
expression_ae/claim_positioning/: position_baseline_locked_text_multiline_line.js
expression_ae/logo/: transform_anchor_logo.js  transform_position_logo.js  transform_scale_logo.js
expression_ae/position/: position_info.js
python/: README.md  __init__.py  bump_changelog.py  config_converter.py  csv_to_json.py  csv_to_subtitles_json.py  json_converter.py  merge_config_into_preset.py  run_tests.py  sitecustomize.py
repo_config/: .zshrc  extensions.json  launch.json  settings.json  tasks.json
(+166 files in other folders)
