[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "json-tools"
version = "0.0.0"
description = "Utilities for CSV/JSON and subtitle tooling"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["python*"]

[tool.pytest.ini_options]
addopts = "-q --maxfail=1"
python_files = ["test_*.py"]


[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
